# ChangeLog for media-libs/gle
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gle/Attic/ChangeLog,v 1.27 2006/12/16 18:57:30 masterdriverz Exp $

  16 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  gle-3.1.0-r1.ebuild:
  Force make install -j1; bug 157368

  02 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  gle-3.1.0-r1.ebuild:
  Fix doc install location, thanks to Chris Mayo for the patch, bug 154900

  29 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> gle-3.1.0-r1.ebuild:
  Fix autotools dependencies. Closes bug #150142.

  06 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> gle-3.1.0-r1.ebuild:
  Add ~x86-fbsd keyword.

*gle-3.1.0-r1 (27 Jul 2006)

  27 Jul 2006; Patrick McLean <chutzpah@gentoo.org> +gle-3.1.0-r1.ebuild:
  New revision. Update ebuild to always build against xorg-x11, since nvidia's
  opengl seems to be broken (bug #141859). Original ebuild contributed by
  Samuli Suominen <sasuomin@uusikaupunki.fi> with patches from Tiziano Müller
  <gentoo@dev-zero.ch>.

  26 Jul 2006; Patrick McLean <chutzpah@gentoo.org>
  +files/gle-3.1.0-amd64-skip-example.patch, gle-3.1.0.ebuild:
  Add patch to exclude the examples dir from compilation (bug 141780). Thanks
  to Samuli Suominen <sasuomin@uusikaupunki.fi> for the ebuild and patch.

*gle-3.1.0 (25 Jul 2006)

  25 Jul 2006; Patrick McLean <chutzpah@gentoo.org> +metadata.xml,
  +gle-3.1.0.ebuild:
  Version bump, fixes bug #122638. Ebuild submitted by Samuli Suominen
  <sasuomin@uusikaupunki.fi>

*gle-3.0.1-r3 (23 Jun 2006)

  23 Jun 2006; Petteri Räty <betelgeuse@gentoo.org> +gle-3.0.1-r3.ebuild:
  Added a doc use flag for the html documentation that was previously always
  installed.

  18 May 2006; Harald van Dĳk <truedfx@gentoo.org>
  +files/configure-LANG.patch, gle-3.0.1-r2.ebuild:
  Fix compilation with et_EE locale (#133625)

  18 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> gle-3.0.1-r2.ebuild: