@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/gle
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gle/Attic/ChangeLog,v 1.27 2006/12/16 18:57:30 masterdriverz Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gle/Attic/ChangeLog,v 1.28 2007/02/04 15:28:23 drac Exp $
+
+  04 Feb 2007; Samuli Suominen <drac@gentoo.org> gle-3.1.0-r1.ebuild:
+  Clean up.
 
   16 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
   gle-3.1.0-r1.ebuild:
